
[workspace]
resolver = '2'
members = [
	'packages/rust/kbve',
	'packages/rust/erust',
	'packages/rust/holy',
	'packages/rust/jedi',
	'apps/kbve/kilobase',
	'packages/rust/q',
	'packages/rust/soul',
	'apps/herbmail/axum-herbmail',
	'apps/memes/axum-memes',
	'apps/irc/irc-gateway',
	'apps/discordsh/axum-discordsh',
	'apps/kbve/axum-kbve',
	'apps/chuckrpg/axum-chuckrpg',
	'apps/cryptothrone/axum-cryptothrone',
	'apps/kbve/isometric/src-tauri',
	'apps/kbve/desktop-kbve/src-tauri',
	'packages/rust/bevy/bevy_inventory',
	'packages/rust/bevy/bevy_statemachine',
	'packages/rust/bevy/bevy_player',
	'packages/rust/bevy/bevy_cam',
	'packages/rust/bevy/bevy_kbve_net',
	'packages/rust/bevy/bevy_items',
	'packages/rust/bevy/bevy_npc',
	'packages/rust/bevy/bevy_mapdb',
	'packages/rust/bevy/bevy_quests',
	'packages/rust/bevy/bevy_battle',
	'packages/rust/bevy/bevy_skills',
	'packages/rust/bevy/bevy_tasker',
]

[profile.dev]
opt-level = 1

[profile.dev.overrides.kilobase]
panic = 'unwind'

[profile.dev.overrides.isometric-game]
panic = 'unwind'

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[profile.release.overrides.kilobase]
panic = 'unwind'
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.release.overrides.isometric-game]
panic = 'unwind'
opt-level = 3
lto = 'fat'
codegen-units = 1
