[tool.coverage.run]
branch = true
source = [ "kbve_atlas" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/atlas/html' --cov-report xml:'../../coverage/apps/atlas/coverage.xml' --html='../../reports/apps/atlas/unittests/html/index.html' --junitxml='../../reports/apps/atlas/unittests/junit.xml'"

[tool.poetry]
name = "kbve"
version = "1.0.6"
description = "ATLAS"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "kbve_atlas"

  [tool.poetry.dependencies]
  python = ">=3.12,<3.13"
  pyautogen = {extras = ["lmm", "redis"], version = "^0.2.23"}
  docker = "^7.0.0"
  beautifulsoup4 = "^4.12.3"
  litellm = "^1.34.39"
  openai = "^1.16.2"
  requests = "^2.31.0"
  aiohttp = "^3.9.3"
  lxml = "^5.2.1"
  fastapi = "^0.110.1"
  uvicorn = {extras = ["standard"], version = "^0.29.0"}

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "7.3.1"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
