[tool.coverage.run]
branch = true
source = [ "kbve_atlas" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/atlas/html' --cov-report xml:'../../coverage/apps/atlas/coverage.xml' --html='../../reports/apps/atlas/unittests/html/index.html' --junitxml='../../reports/apps/atlas/unittests/junit.xml'"

[tool.pyright]
include = ["kbve_atlas"]
exclude = ["**/tests", "**/__pycache__", "**/*.venv"]

[tool.pyright.behavior]
reportMissingImports = true
reportMissingTypeStubs = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportGeneralTypeIssues = true
reportFunctionMemberAccess = true
reportUnusedVariable = true
strict = true
typeCheckingMode = "strict"

[tool.pyright.environment]
pythonVersion = "3.12"
venvPath = ".venv"
venv = "myenv"
stubPath = "typings"
typingsPath = "typings"
analyzeTypeshed = false
autoSearchPaths = true


[tool.poetry]
name = "kbve"
version = "1.0.11"
description = "ATLAS"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "kbve_atlas"

  [tool.poetry.dependencies]
  python = ">=3.10,<3.13"
  pyautogen = {extras = ["lmm", "redis"], version = "^0.2.23"}
  docker = "^7.0.0"
  beautifulsoup4 = "^4.12.3"
  litellm = "^1.34.39"
  openai = "^1.16.2"
  requests = "^2.31.0"
  aiohttp = "^3.9.3"
  lxml = "^5.2.1"
  fastapi = "^0.110.1"
  uvicorn = {extras = ["standard"], version = "^0.29.0"}
  broadcaster = {extras = ["redis"], version = "^0.2.0"}
  anyio = "^4.3.0"
  humancursor = "^1.1.5"
  opencv-python = "^4.9.0.80"
  pyautogui = "^0.9.54"
  pillow = "^10.3.0"
  websockify = "^0.11.0"
  seleniumbase = "^4.27.0"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "8.2.0"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
