[package]
name = "jobboard"
authors = ["kbve", "h0lybyte"]
version = "0.1.0"
edition = "2021"
publish = false
description = "Job Board — decoupled Rust/Axum REST API (first-party auth)"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }

axum = { version = "0.8.5", features = ["macros"] }

tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["compression-full", "limit", "trace", "cors", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio-postgres = { version = "0.7.2", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }

uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "10.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

prost = "0.14"
prost-types = "0.14"

anyhow = "1.0"
thiserror = "2"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
rust-embed = "8"
mime_guess = "2"

jedi = { path = "../../packages/rust/jedi", features = ["postgres"] }

[build-dependencies]
prost-build = "0.14"
