[package]
name = "kilobase"
version = "15.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_kilobase"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = []

[dependencies]
pgrx = "=0.12.3"
jedi = { path = "../../packages/jedi" }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
thiserror = "1.0"
ulid = "1.1.3"
base62 = "2.0.2"

[dev-dependencies]
pgrx-tests = "=0.12.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
