[package]
name = "met"
authors = ["kbve", "h0lybyte"]
version = "0.1.0"
edition = "2021"
publish = false
description = "Metrics — in-house client telemetry ingest (errors/perf/events) to ClickHouse"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
axum = { version = "0.8.5", features = ["macros"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["compression-full", "limit", "trace", "cors", "timeout"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
ahash = "0.8"
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1.0"
thiserror = "2"
dotenvy = "0.15"

jedi = { path = "../../packages/rust/jedi", features = ["clickhouse"] }
