[project]
name = "pydesk"
version = "0.1.0"
description = "PyDesk - FastAPI application with fudster library integrations"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fudster>=0.1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.uv.sources]
fudster = { path = "../../packages/python/fudster", editable = true }

[dependency-groups]
dev = [
    "autopep8==2.0.2",
    "flake8==6.0.0",
    "pytest==8.3.3",
    "pytest-sugar==0.9.7",
    "pytest-cov==4.1.0",
    "pytest-html==3.2.0",
]

[tool.coverage.run]
branch = true
source = [ "pydesk" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/apps/pydesk/html' --cov-report xml:'../../coverage/apps/pydesk/coverage.xml' --html='../../reports/apps/pydesk/unittests/html/index.html' --junitxml='../../reports/apps/pydesk/unittests/junit.xml'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
