[package]
name = "rust_api_profile"
version = "0.1.1"
edition = "2021"
publish = false


[dependencies]
kbve = { path = "../../packages/kbve" }
axum = { version = "0.6.20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.4", features = ["cors"] }
r2d2 = "0.8.9"
diesel = { version = "2.0.0", features = ["mysql", "chrono", "r2d2"] }
jedi = "0.1.11"
# rathole = "0.5"
# hyper = "1.3.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
