[package]
name = "rust_godot_towerdefense"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
godot = { version = "0.2.2", features = ["experimental-wasm", "lazy-function-tables"] }
bevy_ecs = { version = "0.15.1", features = ["default"] }
rstar = "0.12.2"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
debug = false