[package]
name = "rust_godot_towerdefense"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false


[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
godot = { version = "0.2.2", features = ["experimental-wasm", "lazy-function-tables"] }
bevy_ecs = { version = "0.15.1", features = ["default"] }
rstar = "0.12.2"
papaya = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.0"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
debug = false