[package]
name = "disoxide"
authors = ["kbve", "h0lybyte"]
version = "1.2.0"
edition = "2024"
publish = false


[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = { version = "2.9.0", features = ["serde"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
    "fs",
    "cors"
] }
tokio-postgres = "0.7.2"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["ws", "macros"] }
axum-extra = { version = "0.10.0", features = [
    "typed-header",
    "protobuf",
    "query",
    "json-deserializer",
    "error-response",
    "cookie",
    "form",
    "file-stream"
]}
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.21.0"
redis = { version = "0.29.1", features = ["tokio-rustls-comp"] }
prost = { version = "0.13", features = ["prost-derive"] }
papaya = "0.2.1"
# tokio-tungstenite = "0.26.2"
futures-util = "0.3"
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
# hyper-tungstenite = "0.17.0"
tonic = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
http-body-util = "0.1"
ulid = { version = "1", features = ["serde", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

#jedi = { git = "https://github.com/KBVE/kbve.git", branch = "dev", package = "jedi" }
jedi = { git = "https://github.com/KBVE/kbve.git", rev = "93a925aea6457df4d7c102c0472b8f48a48daa26", package = "jedi"}
#jedi = { path = "../../../packages/rust/jedi" }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
jemalloc = ["dep:tikv-jemallocator"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'
