[package]
name = "axum-discordsh"
authors = ["kbve", "h0lybyte"]
version = "0.1.18"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.3", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.8", features = [
    "compression-full",
    "limit",
    "trace",
    "fs",
    "cors",
    "set-header"
] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
askama = "0.15.4"
socket2 = "0.6.1"
num_cpus = "1.17.0"
dotenvy = "0.15"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
poise = "0.6.1"
sysinfo = "0.38.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
dashmap = "6.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# Workspace path dependencies
jedi = { path = "../../../packages/rust/jedi" }
kbve = { path = "../../../packages/rust/kbve", features = ["supabase", "image-gen"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
serial_test = "3"
http-body-util = "0.1"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[package.metadata.askama]
dirs = ["templates"]
