[package]
name = "axum-discordsh"
authors = ["kbve", "h0lybyte"]
version = "0.1.45"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.3", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.7.0", features = [
    "compression-full",
    "limit",
    "trace",
    "fs",
    "cors",
    "set-header"
] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
askama = "0.15.4"
socket2 = "0.6.1"
num_cpus = "1.17.0"
dotenvy = "0.15"
sysinfo = "0.38.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }

# Workspace path dependencies
kbve = { path = "../../../packages/rust/kbve", features = ["supabase", "image-gen"] }
jedi = { path = "../../../packages/rust/jedi", features = ["postgres"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7", optional = true }

[dev-dependencies]
http-body-util = "0.1"
serial_test = "3"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[package.metadata.askama]
dirs = ["templates"]
