[package]
name = "axum-kbve"
authors = ["kbve", "h0lybyte"]
version = "1.0.160"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.3", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.8", features = [
    "compression-full",
    "limit",
    "trace",
    "fs",
    "cors",
    "set-header"
] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.5", features = ["ws", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
axum-extra = { version = "0.12.1", features = ["cookie"] }
askama = "0.16.0"
socket2 = "0.6.1"
num_cpus = "1.17.0"
dotenvy = "0.15"

# Proto + serialization
prost = "0.14.1"
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI spec generation. Emits /api/openapi.json which the astro side
# renders via Scalar at /dashboard/api and consumes for /llms.txt.
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

# MCP server. Re-uses the utoipa OpenAPI spec to expose every annotated
# handler as an MCP tool at /api/mcp. Token passthrough lets clients BYO
# bearer; the upstream call is dispatched against the local axum listener.
rmcp = { version = "1.6.0", default-features = false, features = ["server", "transport-streamable-http-server", "tower", "macros"] }
rmcp-openapi = { version = "0.26.6", features = ["authorization-token-passthrough"] }
url = "2"
http = "1"

# DB + Auth (Phase 5)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
dashmap = { version = "6.1", features = ["rayon"] }
rayon = "1.10"
regex = "1.11"
lru = "0.18"

# Game server (headless Bevy + avian3d + lightyear)
bevy = { version = "0.18", default-features = false, features = [
    "bevy_state",
    "bevy_render",
    "bevy_asset",
] }
avian3d = { version = "0.5", default-features = false, features = ["3d", "f32", "parry-f32", "serialize"] }
lightyear = { version = "0.26", default-features = false, features = [
    "server",
    "replication",
    "prediction",
    "interpolation",
    "input_native",
    "websocket",
    "websocket_self_signed",
    "netcode",
    "webtransport",
    "webtransport_self_signed",
    "avian3d",
] }
base64 = "0.22"
rand = "0.10"
lightyear_avian3d = { version = "0.26", default-features = false, features = ["3d"] }
bevy_kbve_net = { path = "../../../packages/rust/bevy/bevy_kbve_net", features = ["npcdb", "creatures"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
webpki-roots = "0.26"

# Workspace path dependencies
jedi = { path = "../../../packages/rust/jedi", features = ["clickhouse"] }
kbve = { path = "../../../packages/rust/kbve", features = ["wallet"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Referral handler hashes client IP + subnet before any DB write.
hmac = "0.12"
sha2 = "0.10"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
serial_test = "3"
http-body-util = "0.1"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[package.metadata.askama]
dirs = ["templates"]
